# dictu-mongo

./: .gitmodules  CMakeLists.txt  README.md  mod.du  mongo.du
src/: dictu-mongo.c  dictu-mongo.h
tests/: test.du
